--- a/spellbook/webui/assets/ui.css
+++ b/spellbook/webui/assets/ui.css
@@ -23,7 +23,7 @@ body {
             rgba(18, 66, 69, 1) 0%,
             rgba(125, 89, 27, 1) 39%,
             rgba(115, 4, 125, 1) 100%);
-    background-image: url(bg6.jpg);
+    background-image: url(bg0.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -76,12 +76,14 @@ main {
     text-align: left;
     padding-left: 8px;
     border-radius: 4px;
-    border: solid 2px var(--ancient);
+    /* border: solid 2px var(--ancient); */
     color: var(--text-color);
-    background-color: black;
+    /* background-color: black; */
     width: 250px;
     margin-bottom: 8px;
     padding: 2px 2px 2px 16px;
+    background-color: #0000;
+    border: none;
 }
 
 .sidebar-submit:hover {
